--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -18,11 +18,11 @@
     <header><h1>Skipulag vefsíðu með grid</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
     <nav>
         <ul>
-            <li><a href="tengill1">Tengill 1</a></li>
-            <li><a href="tengill2"> Tengill 2</a></li>
-            <li><a href="tengill3"> Tengill 3</a></li>
-            <li><a href="tengill4"> Tengill 4</a></li>
-            <li><a href="tengill5"> Tengill 5</a></li>
+            <li><a href="">Tengill 1</a></li>
+            <li><a href=""> Tengill 2</a></li>
+            <li><a href=""> Tengill 3</a></li>
+            <li><a href=""> Tengill 4</a></li>
+            <li><a href=""> Tengill 5</a></li>
         </ul>
         </nav>
     <aside><h3>A lovley script</h3>
@@ -55,7 +55,7 @@ Hey, now You're a rock star
 Get the show on, get paid
 And all that glitters is gold
 Only shootin' stars break the mold
-It's a cool place and they say it gets colder
+It's a cool <blockquote> Þetta er eitt vinsælasta lag á netinu öll þökk sé shrek myndinni sem allir elska, síðan myndin kom út hefur þetta lag verið það sem krakkar kalla meme song eða á íslensku mím lag</blockquote> place and they say it gets colder
 You're bundled up now but wait till you get older
 But the meteor men beg to differ
 Judging by the hole in the satellite picture
