--- a/verkefni1/verkefni1_4A.html
+++ b/verkefni1/verkefni1_4A.html
@@ -4,6 +4,7 @@
 	<title>Ottar</title>
 
 </head>
+<style>a:visited{color: green;} </style>
 <body>
 	<p>Önnur <a href="verk1-1-4.html">Cool Síða</a> </p>
 <h1>Aðalfyrirsögn  200% af hæð p</h1>
