--- a/verkefni1/verkefni_1-5.html
+++ b/verkefni1/verkefni_1-5.html
@@ -4,6 +4,7 @@
 	<title>cool síða</title>
 	<link rel="stylesheet" href="Main.css">
 </head>
+<style>a:visited{color: green;} </style>
 <body>
 <p><a href="verk1-1-4.html">Aftur Heim</a> </p>
 <h1><span class="blue">Lorem Ipsum</h1></span>
