--- a/verkefni1/verk1-1-4.html
+++ b/verkefni1/verk1-1-4.html
@@ -4,7 +4,23 @@
 	<title>Ottar</title>
 	<link rel="stylesheet" href="Main.css">
 </head>
-<style>a:visited{color: green;} </style>
+<style>
+a:link {
+  color: red;
+}
+
+a:visited {
+  color: green;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+a:active {
+  color: blue;
+}
+</style>
 <body>
 	<p>Önnur <a href="verkefni_1-5.html">Cool Síða</a> </p>
 <h1>Aðalfyrirsögn  200% af hæð p</h1>
