--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -25,110 +25,15 @@
             <li><a href=""> Tengill 5</a></li>
         </ul>
         </nav>
-    <aside><h3>A lovley script</h3>
-<p>{Man} Once upon a time there was a lovely princess.
-But she had an enchantment upon her of a fearful sort which could only be broken by love's first kiss. She was locked away in a castle guarded by a terrible fire-breathing dragon.
-Many brave knigts had attempted to free her from this dreadful prison,but non prevailed.
-She waited in the dragon's keep in the highest room of the tallest 
-tower for her true love and true love's first kiss.
-{Laughing} 
-Like that's ever gonna happen.
-{Paper Rusting, Toilet Flushes}
-What a load of - 
+    <aside><h3>Pooe Peei Penge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </p></aside>
-    <main> <h3>All Star</h3>
-Somebody once told me the world is gonna roll me
-I ain't the sharpest tool in the shed
-She was lookin' kind of dumb with her finger and her thumb
-In the shape of an "L" on her forehead
-The years start comin' and they don't stop comin'
-Fed to the rules and hit the ground runnin'
-Didn't make sense not to live for fun
-Your brain gets smart but your head gets dumb
-So much to do so much to see
-So what's wrong with takin' the backstreets
-You'll never know if you don't go
-You'll never shine if you don't glow
-Hey, now You're an all-star
-Get your game on, go play
-Hey, now You're a rock star
-Get the show on, get paid
-And all that glitters is gold
-Only shootin' stars break the mold
-It's a cool <blockquote> Þetta er eitt vinsælasta lag á netinu öll þökk sé shrek myndinni sem allir elska, síðan myndin kom út hefur þetta lag verið það sem krakkar kalla meme song eða á íslensku mím lag</blockquote> place and they say it gets colder
-You're bundled up now but wait till you get older
-But the meteor men beg to differ
-Judging by the hole in the satellite picture
-The ice we skate is gettin' pretty thin
-The water's getting warm so you might as well swim
-My world's on fire
-How 'bout yours
-That's the way I like it and I'll never get bored
-Hey, now, you're an all-star{Shouting}
-Get your game on, go play
-Hey, now You're a rock star
-Get the show on, get paid
-And all that glitters is gold
-Only shootin' stars break the mold
-{Belches}
-Go!
-Go!
-{Record Scratching}
-Go. Go.Go.
-Hey, now, you're an all-star
-Get your game on, go play
-Hey, now You're a rock star
-Get the show on, get paid
-And all that glitters is gold
-Only shootin' stars break the mold
+    <main> <h3>Lipsum Lorelai</h3>
+Curabitur condimentum porttitor augue at egestas. Sed ipsum magna, placerat vehicula massa eget, aliquam convallis ipsum. Duis eget neque a sapien faucibus rutrum non vitae lorem. Quisque ultricies faucibus auctor. Donec suscipit porttitor eros, a accumsan tortor bibendum molestie. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla ultrices dui at lobortis. Suspendisse tincidunt, libero ut feugiat iaculis, nibh ipsum finibus quam, sed tincidunt neque lectus vel lorem. Phasellus pellentesque arcu ac nisl tristique, quis accumsan nibh aliquet. In sed pretium velit, et vehicula sem. Suspendisse vel magna sed metus luctus interdum ac a velit. Nulla porttitor, lorem at ornare vestibulum, quam ligula cursus massa, non suscipit lectus ante a mauris. Suspendisse tincidunt lectus non erat convallis, at semper nisl sollicitudin. Quisque blandit tempus enim, eu consequat tellus blandit vitae.
+It's a cool <blockquote>Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut nisl quis, tempor auctor mi. Aliquam at risus lacus. Donec commodo efficitur vestibulum. Nam eget turpis enim. Vestibulum vitae ante et mauris pellentesque pulvinar et ac mauris. Phasellus nec sollicitudin tortor, ut egestas ligula. Proin ac orci massa. Quisque at orci tortor.</blockquote> Vivamus sodales eleifend metus vel dignissim. Suspendisse id leo libero. Pellentesque iaculis sagittis nisl, vel malesuada mauris venenatis a. Integer malesuada mauris et orci gravida, ac accumsan purus finibus. Mauris metus nibh, congue a ante non, sollicitudin auctor velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla dictum dictum neque ac vehicula. Sed malesuada libero sed dui vulputate interdum. Fusce eget nibh eget ipsum condimentum porttitor. Maecenas rhoncus tortor ac malesuada sagittis. Fusce ac rutrum tellus. In tincidunt molestie dui, et volutpat arcu fringilla vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </main>
-    <article><h3>Bautiful Script</h3>
-<p>-Think it's in there?
--All right. Let's get it!
--Whoa. Hold on. Do you know what that thing can do to you?
--Yeah, it'll grind your bones for it's bread.
-{Laughs}
--Yes, well, actually, that would be a gaint.
-Now, ogres - - They're much worse.
-They'll make a suit from your freshly peeled skin.
--No!
--They'll shave your liver. Squeeze the jelly from your eyes!
-Actually, it's quite good on toast.
--Back! Back, beast! Back! I warn ya!
-{Gasping}
--Right.
-{Roaring}
-{Shouting}
-{Roaring}
-{Whispers} This is the part where you run away.
-{Gasping}
-{Laughs}
-{Laughing} And stay out!
-"Wanted. Fairy tale creatures."
-{Sighs}
-{Man's voice} All right. This one's full.
--Take it away!
-{Gasps}
--Move it along. Come on! Get up!
--Next!
--Give me that! Your fiying days are over.
-That's 20 pieces of silver for the witch. Next!
--Get up! Come on!
--Twenty pieces.
-{Thudding}
--Sit down there!
--Keep quiet!
-{Crying}
--This cage is too small.
--Please, don't turn me in. I'll never be stubborn again.
-I can change. Please! Give me another chance!
--Oh, shut up.
--Oh!
--Next!
--What have you got?
--This little wooden puppet.
--I'm not a puppet. I'm a real boy.
--Five shillings for the possessed toy. Take it away.
+    <article><h3>Lippsy Dippsy Doppsy</h3>
+<p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </p></article>
     
     <footer>
