--- a/verkefni3/index3.html
+++ b/verkefni3/index3.html
@@ -12,16 +12,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main3.css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Ultra&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="wrapper">
-    <header><h1>Shrek</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
+    <header><h1>Shrek, The Fictional Character everybody Loves</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
     <nav>
         <ul>
-            <li><a href="">Tengill 1</a></li>
-            <li><a href=""> Tengill 2</a></li>
-            <li><a href=""> Tengill 3</a></li>
-            <li><a href=""> Tengill 4</a></li>
+            <li><a href="https://www.youtube.com/watch?v=W37DlG1i61s">Shrek Trailer</a></li>
+            <li><a href="https://www.imdb.com/title/tt0126029/fullcredits">Shrek full cast and crew</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Ogre"> About Ogres</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Shrek_(franchise)">Franchise</a></li>
             <li><a href=""> Tengill 5</a></li>
         </ul>
         </nav>
@@ -71,55 +72,9 @@ Get the show on, get paid
 And all that glitters is gold
 Only shootin' stars break the mold
 </main>
-    <article><h3>Bautiful Script</h3>
-<p>-Think it's in there?
--All right. Let's get it!
--Whoa. Hold on. Do you know what that thing can do to you?
--Yeah, it'll grind your bones for it's bread.
-{Laughs}
--Yes, well, actually, that would be a gaint.
-Now, ogres - - They're much worse.
-They'll make a suit from your freshly peeled skin.
--No!
--They'll shave your liver. Squeeze the jelly from your eyes!
-Actually, it's quite good on toast.
--Back! Back, beast! Back! I warn ya!
-{Gasping}
--Right.
-{Roaring}
-{Shouting}
-{Roaring}
-{Whispers} This is the part where you run away.
-{Gasping}
-{Laughs}
-{Laughing} And stay out!
-"Wanted. Fairy tale creatures."
-{Sighs}
-{Man's voice} All right. This one's full.
--Take it away!
-{Gasps}
--Move it along. Come on! Get up!
--Next!
--Give me that! Your fiying days are over.
-That's 20 pieces of silver for the witch. Next!
--Get up! Come on!
--Twenty pieces.
-{Thudding}
--Sit down there!
--Keep quiet!
-{Crying}
--This cage is too small.
--Please, don't turn me in. I'll never be stubborn again.
-I can change. Please! Give me another chance!
--Oh, shut up.
--Oh!
--Next!
--What have you got?
--This little wooden puppet.
--I'm not a puppet. I'm a real boy.
--Five shillings for the possessed toy. Take it away.
-</p></article>
-    
+    <article><h3>Val Fontar</h3>
+<p>Ég Valdi Header fontinn því mér fannst hann vera mjög stór og skessulegur eins og shrek þannig þetta myndi lýsa því pínu hvernig hann myndi skrifa því hann er með mjög stórar og miklar hendur og ennig er þetta pínu líkt fontinum sem var notaður í myndinni sjálfri. Ég valdi grænan því shrek er grænn eins og allir vita og þá er það náttúrulega besti liturinn fyrir síðu sem fjallar öll um hann.
+</p></article>    
     <footer>
         <ul>
             <li><a href="https://fonts.google.com">Google fonts</a></li>
@@ -131,3 +86,4 @@ I can change. Please! Give me another chance!
 </div>
 </body>
 </html>
+
