--- a/verkefni3/index4.html
+++ b/verkefni3/index4.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main4.css">
-    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="wrapper">
@@ -17,7 +17,7 @@
             <li><a href="https://www.seriousfacts.com/rainbow-facts/">Source</a></li>
             <li><a href="https://unsplash.com/images/nature/rainbow">Colourful pictures of rainbows</a></li>
             <li><a href="https://visitreykjavik.is/rainbow-street-reykjavik">The rainbow street in Reykjavík</a></li>
-            <li><a href="https://www.rainbowshops.com">Rainbowshops</a></li>
+            <li><a href="http://www.everydayim.com">Smelltu hérna og láttu músina á "HUSTLIN"</a></li>
         </ul>
         </nav>
     <main> <h3>40 Facts about rainbows</h3>
@@ -45,7 +45,7 @@
 <li>19. The ancient people of Serbia believed that the rainbow was the Storm God’s bow.</li>
 <li>20. Alexander’s Band is technically not a rainbow, but it is associated with the primary and secondary rainbows.</li>
 <li>21. Rainbows can be seen not just in the rain but also in the mist, spray, fog, and dew.
-<blockquote>Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow Rainbow </blockquote>
+<blockquote>Ég valdi þennan font því hann lítur mjög nátturulega út og ég tegnji regnboga við náttúruna og einnig lítur þessu font mjög hvetjandi sem mér fannst þessi font ná að lýsa því vel. svo var litavalið á síðuni pínnu sjálfgefið, síðan er mest megnið um regnbogann og þers vegna fannst mér fara vel að hafa regnboga background. </blockquote>
 <li>22. Very rarely, light can be reflected 3 or 4 times within a water droplet.</li>
 <li>23. A “fogbow” is formed by cloud and fog droplets.</li>
 <li>24. “Rainbow” comes from the Latin arcus pluvius, meaning “rainy arch.”</li>
@@ -75,7 +75,7 @@
             <li><a href="https://practicaltypography.com/system-fonts.html"> Kerfisletus - system fonts</a></li>
             <li><a href="http://litamalun.is/litir-og-litaval.html"> Litaval</a></li>
             <li><a href="tengill4">2019 OOO</a></li>
-        </ul>    
+        </ul>   
            </footer>
 </div>
 </body>
