--- a/verkefni3/index3.html
+++ b/verkefni3/index3.html
@@ -18,7 +18,7 @@
             <li><a href="https://www.imdb.com/title/tt0126029/fullcredits">Shrek full cast and crew</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Ogre"> About Ogres</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Shrek_(franchise)">Franchise</a></li>
-            <li><a href=""> Tengill 5</a></li>
+            <li><a href="https://www.imsdb.com/scripts/Shrek.html">Shrek whole script</a></li>
         </ul>
         </nav>
     <main> <h3>All Star</h3>
