--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -19,9 +19,9 @@
     <nav>
         <ul>
             <li><a href="">Tengill 1</a></li>
-            <li><a href="ottarorri.github.io/verkefni3/index2">Síða 2/ index2</a></li>
-            <li><a href="ottarorri.github.io/verkefni3/index3">Síða 3/ index3</a></li>
-            <li><a href="ottarorri.github.io/verkefni3/index4">Síða 4/ index4</a></li>
+            <li><a href="ottarorri.github.io/verkefni3/index2.html">Síða 2/ index2</a></li>
+            <li><a href="ottarorri.github.io/verkefni3/index3.html">Síða 3/ index3</a></li>
+            <li><a href="ottarorri.github.io/verkefni3/index4.html">Síða 4/ index4</a></li>
             <li><a href=""> Tengill 5</a></li>
         </ul>
         </nav>
