--- a/verkefni3/index2.html
+++ b/verkefni3/index2.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="main2.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
 </head>
-<style>a:visited{color: green;} </style>
 <body>
    <div class="wrapper">
-    <header><h1>Bee Movie</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Kerfisletur - system fonts</a></header>
+    <header><h1>Bee Movie</h1><a href="index.html">Síða 1</a></header>
     <nav>
         <ul>
             <li><a href="https://www.youtube.com/watch?v=VONRQMx78YI">Bee Movie Trailer</a></li>
