--- a/verkefni3/index3.html
+++ b/verkefni3/index3.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <div class="wrapper">
-    <header><h1>Shrek, The Fictional Character everybody Loves</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
+    <header><h1>Shrek, The Fictional Character everybody Loves</h1><a href="index.html">Síða 1</a></header>
     <nav>
         <ul>
             <li><a href="https://www.youtube.com/watch?v=W37DlG1i61s">Shrek Trailer</a></li>
