--- a/verkefni3/index4.html
+++ b/verkefni3/index4.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <div class="wrapper">
-    <header><h1>Rainbows</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
+    <header><h1>Rainbows</h1><a href="index.html">Síða 1</a></header>
     <nav>
         <ul>
             <li><a href="https://www.seriousfacts.com/rainbow-facts/">Source</a></li>
