--- a/verkefni3/index3.html
+++ b/verkefni3/index3.html
@@ -18,7 +18,7 @@
             <li><a href="https://www.imdb.com/title/tt0126029/fullcredits">Shrek full cast and crew</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Ogre"> About Ogres</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Shrek_(franchise)">Franchise</a></li>
-            <li><a href="https://www.imsdb.com/scripts/Shrek.html">Shrek whole script</a></li>
+            <li><a href="https://www.youtube.com/watch?v=L_jWHffIx5E">All Star</a></li>
         </ul>
         </nav>
     <main> <h3>All Star</h3>
@@ -69,7 +69,28 @@ Only shootin' stars break the mold
 </main>
     <article><h3>Val Fontar</h3>
 <p>Ég Valdi Header fontinn því mér fannst hann vera mjög stór og skessulegur eins og shrek þannig þetta myndi lýsa því pínu hvernig hann myndi skrifa því hann er með mjög stórar og miklar hendur og ennig er þetta pínu líkt fontinum sem var notaður í myndinni sjálfri. Ég valdi grænan því shrek er grænn eins og allir vita og þá er það náttúrulega besti liturinn fyrir síðu sem fjallar öll um hann.
-</p></article>    
+</p></article>
+<aside><h3>All stars pt.2</h3>
+<p>It's a cool place, and they say it gets colder
+You're bundled up now, wait 'til you get older
+But the meteor men beg to differ
+Judging by the hole in the satellite picture
+The ice we skate is getting pretty thin
+The water's getting warm so you might as well swim
+My world's on fire, how 'bout yours?
+That's the way I like it and I'll never get bored
+Hey now, you're an all star
+Get your game on, go play
+Hey now, you're a rock star
+Get the show on, get paid
+All that glitters is gold
+Only shooting stars break the mold Hey now, you're an all star
+Get your game on, go play
+Hey now, you're a rock star
+Get the show on, get paid
+And all that glitters is gold
+Only shooting stars
+</p></aside>    
     <footer>
         <ul>
             <li><a href="https://fonts.google.com">Google fonts</a></li>
@@ -81,4 +102,5 @@ Only shootin' stars break the mold
 </div>
 </body>
 </html>
+
 
