--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -5,24 +5,29 @@
     <meta charset="utf-8"> 
     <title>Verkefni 4.1 bakgrunnar</title>
     <link href="https://fonts.googleapis.com/???" rel="stylesheet">
-    <link rel="stylesheet" href=" ">
+    <link rel="stylesheet" href="main2.css">
+    <script>
+    window.onload = function() {  // reload file every second
+        setInterval(function() { location.reload(); } , 1000);
+    };
+</script>
   </head>
   <body>
-    <header class=" ">
+    <header>
       <div>
         <h1>
           Bakgrunnslitir
         </h1>
       </div>
       <div>
+        <nav>
         <h4 class=" ">Verkefni 4.1</h4>
-        <nav class=" ">
           <a href=" " title=" ">Bakgrunnar | </a>
           <a href=" " title=" ">Efnisyfirlit</a>
         </nav>
       </div>
     </header>
-    <section class=" "> 
+    <main> 
       <div class=" ">
         <h1>Litaskali í bakgrunni </h1>
         <p>Meðfylgjandi verkefninu er <strong>.zip skrá </strong>með 2 vefsíðum sem þú átt að tengja saman.  Normalize.css stílsíðan fylgir með en aðal stílsíðuna vantar. Þú átt að búa hana til og tengja við vefsíðurnar. Skipulag síðunnar á að vera svipað því sem sýnt er hér á vefsíðunni en <em>lita- og leturval er frjálst</em></p>
@@ -30,11 +35,11 @@
         <p>Þetta vefdæmi er að hluta til byggt á verkefnadæmi á vef Shayhowe,<em> Gradient backrounds</em> en þar sem hann hefur ekki uppfært vefinn notar hvorki flexbox eða grid lausinr er ekki hægt að fara eftir hans uppsetningu </p>
         <blockquote>Hér er bakgrunnurinn hvítur með 50% gagnsæi <i>(e. transparency).</i><br>Til að skoða kóðann í vafra þá skaltu opna vafra (Chrome) og smella á &#9776; táknið hægra megin í valslánni og velja <em>"Developers tools"</em> úr fellilistanum.<br> Eða bara smella á takkann <b>F12</b> á lyklaborðinu, "Inspectorinn" virkar svipað í Firefox og Chrome</blockquote></p>
       </div>
-    </section>
+    </main>>
     <!--
     Í footer tagið á að setja upplýsignar um þig í DD lista og nokkra tengla í UL lista sem vísa á önnur verkefni og aðrar vefsíður. Vefsíðurnar eiga að birtast í nýjum glugga í vafranum
     -->
-    <footer class=" ">
+    <footer>
       <nav>
         <h4>Listar DD og UL </h4>
         <dl> <!--Description list -->
