--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -4,64 +4,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8"> 
     <title>Verkefni 4.1 bakgrunnar</title>
-    <link href="https://fonts.googleapis.com/???" rel="stylesheet">
-    <link rel="stylesheet" href="main2.css">
+    <!-- veljið leturgerð af http://fonts.google.com-->
+    <link rel="stylesheet" href="css/styles.css">
     <script>
-    window.onload = function() {  // reload file every second
-        setInterval(function() { location.reload(); } , 1000);
-    };
-</script>
+      window.onload = function() {  // reload file every second
+          setInterval(function() { location.reload(); } , 1000);
+      };
+  </script>
   </head>
-  <body>
-    <header>
+  <body> 
+    <header class="container">
       <div>
         <h1>
           Bakgrunnslitir
         </h1>
-      </div>
+      </d iv>
       <div>
-        <nav>
-        <h4 class=" ">Verkefni 4.1</h4>
-          <a href=" " title=" ">Bakgrunnar | </a>
-          <a href=" " title=" ">Efnisyfirlit</a>
+        <p class="verkefni">Verkefni 4.1</p>
+        <nav class="topnav">
+          <a href=" " title="bakgrunnar">Bakgrunnar</a>
+          <a href=" " title="Efnisyfirlit">Efnisyfirlit</a>
         </nav>
       </div>
     </header>
-    <main> 
-      <div class=" ">
-        <h1>Litaskali í bakgrunni </h1>
-        <p>Meðfylgjandi verkefninu er <strong>.zip skrá </strong>með 2 vefsíðum sem þú átt að tengja saman.  Normalize.css stílsíðan fylgir með en aðal stílsíðuna vantar. Þú átt að búa hana til og tengja við vefsíðurnar. Skipulag síðunnar á að vera svipað því sem sýnt er hér á vefsíðunni en <em>lita- og leturval er frjálst</em></p>
-        <p>Þegar skjár er minni en 60em (960px) þá á textinn í vefsíðunni að dragast saman og vera sýnilegur, prófaðu að nota stílbragðið <em> "max-with".</em></p>
-        <p>Þetta vefdæmi er að hluta til byggt á verkefnadæmi á vef Shayhowe,<em> Gradient backrounds</em> en þar sem hann hefur ekki uppfært vefinn notar hvorki flexbox eða grid lausinr er ekki hægt að fara eftir hans uppsetningu </p>
-        <blockquote>Hér er bakgrunnurinn hvítur með 50% gagnsæi <i>(e. transparency).</i><br>Til að skoða kóðann í vafra þá skaltu opna vafra (Chrome) og smella á &#9776; táknið hægra megin í valslánni og velja <em>"Developers tools"</em> úr fellilistanum.<br> Eða bara smella á takkann <b>F12</b> á lyklaborðinu, "Inspectorinn" virkar svipað í Firefox og Chrome</blockquote></p>
-      </div>
-    </main>>
-    <!--
-    Í footer tagið á að setja upplýsignar um þig í DD lista og nokkra tengla í UL lista sem vísa á önnur verkefni og aðrar vefsíður. Vefsíðurnar eiga að birtast í nýjum glugga í vafranum
-    -->
-    <footer>
-      <nav>
-        <h4>Listar DD og UL </h4>
-        <dl> <!--Description list -->
-          <dt>Nafn</dt>
-            <dd> </dd>
-        </dl>
-      </nav>
-      <nav>
-        <h4>Innri tenglar <em>(relative links)</em></h4>
-        <ul>
-          <li><a href=" ">Forsíða</a></li>
-          <li><a href=" ">Verkefni 1</a></li></li>
-        </ul>
-      </nav>
-      <nav>
-        <h4>Ytri tenglar <em>(absolute links)</em></h4>
-        <ul>
-          <li>  <!-- Absolute links "target _blank" opnar nýjan glugga í vafranum -->
-            <a href="http://learn.shayhowe.com/html-css/setting-backgrounds-and-gradients/#css3-background-properties" target="_blank" title="bagrunnar">Bakgrunnar</a>      
-          </li>    
-      </nav>
-    </footer>
-    <p class=" ">&copy; 2019 </p>
+    <section class="headsection"> 
+      <main class="container">
+        <section>
+          <h1>Litaskali í bakgrunni </h1>
+          <p>Meðfylgjandi verkefninu er <strong>.zip skrá </strong>með 2 vefsíðum sem þú átt að tengja saman.  Normalize.css stílsíðan fylgir með en aðal stílsíðuna vantar. Þú átt að búa hana til og tengja við vefsíðurnar. Skipulag síðunnar á að vera svipað því sem sýnt er hér á vefsíðunni en <em>lita- og leturval er frjálst</em></p>       
+          <p>Þegar skjár er minni en 60em (960px) þá á textinn í vefsíðunni að dragast saman og vera sýnilegur, prófaðu að nota stílbragðið <em><strong>"max-with".</strong></em></p>
+        </section>
+        <section> 
+          <p>Þetta vefdæmi er að hluta til byggt á verkefnadæmi á vef Shayhowe,<em> Gradient backrounds</em> en þar sem hann hefur ekki uppfært vefinn notar hvorki flexbox eða grid lausnir er ekki hægt að fara eftir hans uppsetningu </p>
+          <blockquote>Hér er bakgrunnurinn hvítur með 70% gagnsæi <i>(e. transparency).</i><br>Til að skoða kóðann í vafra þá skaltu opna vafra (Chrome) og smella á &#9776; táknið hægra megin í valslánni og velja <em>"Developers tools"</em> úr fellilistanum.<br> Eða bara smella á takkann <b>F12</b> á lyklaborðinu, "Inspectorinn" virkar svipað í Firefox og Chrome</blockquote></p>
+        </section>
+      </main>
+    </section>
+    <footer class="container col-3">
+        <nav>
+          <h4>DL listi </h4>
+          <dl><!--Description list, nafn tölvupóstur og áfangi-->
+            <dt>Nafn:</dt>
+              <dd><!--nafn hér--></dd>
+            <!--tölvupóstur-->
+            <!--áfangi-->
+          </dl>
+
+        </nav>
+        <nav>
+          <h4>Innri tenglar <em>(relative links)</em></h4>
+          <ul><!-- inner links -- hér þarf að aðlaga slóðir að eigin verkefnum -->
+            <li>Verkefni 1</li>
+            <li>Verkefni 2</li>
+            <li>Verkefni 3.1</li>
+            <li>Verkefni 3.2</li>
+          </ul>
+        </nav>
+        <nav>
+          <h4>Ytri tenglar <em>(absolute links)</em></h4>
+          <ul> <!-- Absolute links "target _blank" opnar nýjan glugga í vafranum !aðeins notað þegar vísað er út úr eigin vef-->
+            <li> 
+              <a href="https://vefgrunnur.github.io/bjargir.html" target="_blank" title="Vefgrunnur">Gagnlegar grunnslóðir</a>        
+            </li>  
+            <li>
+              tengill hér sem vísar á mikilvæga vefsíðu 
+            </li>
+            <li>
+              tengill hér sem vísar á mikilvæga vefsíðu 
+            </li>
+            <li>
+                tengill hér sem vísar á mikilvæga vefsíðu 
+            </li>
+        </nav>
+      </footer>
+    <p class="copy">&copy; 2019 ---</p>
   </body>
 </html>
