--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"> 
     <title>Verkefni 4.1 bakgrunnar</title>
     <!-- veljið leturgerð af http://fonts.google.com-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script>
       window.onload = function() {  // reload file every second
@@ -13,12 +14,12 @@
   </script>
   </head>
   <body> 
-    <header class="container">
+    <header class="container col-2">
       <div>
         <h1>
           Bakgrunnslitir
         </h1>
-      </d iv>
+      </div>
       <div>
         <p class="verkefni">Verkefni 4.1</p>
         <nav class="topnav">
@@ -45,9 +46,11 @@
           <h4>DL listi </h4>
           <dl><!--Description list, nafn tölvupóstur og áfangi-->
             <dt>Nafn:</dt>
-              <dd><!--nafn hér--></dd>
-            <!--tölvupóstur-->
-            <!--áfangi-->
+              <dd>Óttar Orri</dd>
+           <dt>tölvupóstur</dt>
+           <dd>ottarorri@eitthvað.com</dd>
+            <dt>áfangi og braut</dt>
+            <dd>VEFÞ Tölvubraut</dd>
           </dl>
 
         </nav>
