--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -6,12 +6,12 @@
     <title>Verkefni 4.1 bakgrunnar</title>
     <!-- veljið leturgerð af http://fonts.google.com-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script>
-      window.onload = function() {  // reload file every second
-          setInterval(function() { location.reload(); } , 1000);
-      };
-  </script>
+  window.onload = function() {  // reload file every second
+    setInterval(function() { location.reload(); } , 1000);
+  };
+</script>
   </head>
   <body> 
     <header class="container col-2">
@@ -57,10 +57,25 @@
         <nav>
           <h4>Innri tenglar <em>(relative links)</em></h4>
           <ul><!-- inner links -- hér þarf að aðlaga slóðir að eigin verkefnum -->
-            <li>Verkefni 1</li>
-            <li>Verkefni 2</li>
-            <li>Verkefni 3.1</li>
-            <li>Verkefni 3.2</li>
+
+            <li>
+            <a href="ottarorri.github.io/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
+            </li>
+            <li>
+              <a href="ottarorri.github.io/verkefni2/index.html" title="verkefni 2">Verkefni 2</a>
+            </li>
+            <li>
+              <a href="ottarorri.github.io/verkefni2/Box Model 2-1.html" title="verkefni 2.1">Verkefni 2.1</a>
+            </li>
+            <li>
+              <a href="ottarorri.github.io/verkefni2/Box Model 2-2.html" title="verkefni 2.2">Verkefni 2.2</a>
+            </li>
+            <li>
+              <a href="ottarorri.github.io/verkefni2/Box Model 2-3.html" title="verkefni 2.2">Verkefni 2.2</a>
+            </li>
+             <li>
+              <a href="ottarorri.github.io/verkefni3" title="verkefni 3">Verkefni 3</a>
+            </li>
           </ul>
         </nav>
         <nav>
