--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -59,7 +59,7 @@
           <ul><!-- inner links -- hér þarf að aðlaga slóðir að eigin verkefnum -->
 
             <li>
-            <a href="ottarorri.github.io/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
+            <a href="/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
             </li>
             <li>
               <a href="ottarorri.github.io/verkefni2/index.html" title="verkefni 2">Verkefni 2</a>
