--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -62,19 +62,19 @@
             <a href="/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
             </li>
             <li>
-              <a href="ottarorri.github.io/verkefni2/index.html" title="verkefni 2">Verkefni 2</a>
+              <a href="/verkefni2/index.html" title="verkefni 2">Verkefni 2</a>
             </li>
             <li>
-              <a href="ottarorri.github.io/verkefni2/Box Model 2-1.html" title="verkefni 2.1">Verkefni 2.1</a>
+              <a href="/verkefni2/Box Model 2-1.html" title="verkefni 2.1">Verkefni 2.1</a>
             </li>
             <li>
-              <a href="ottarorri.github.io/verkefni2/Box Model 2-2.html" title="verkefni 2.2">Verkefni 2.2</a>
+              <a href="/verkefni2/Box Model 2-2.html" title="verkefni 2.2">Verkefni 2.2</a>
             </li>
             <li>
-              <a href="ottarorri.github.io/verkefni2/Box Model 2-3.html" title="verkefni 2.2">Verkefni 2.2</a>
+              <a href="/verkefni2/Box Model 2-3.html" title="verkefni 2.2">Verkefni 2.2</a>
             </li>
              <li>
-              <a href="ottarorri.github.io/verkefni3" title="verkefni 3">Verkefni 3</a>
+              <a href="/verkefni3" title="verkefni 3">Verkefni 3</a>
             </li>
           </ul>
         </nav>
