--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -23,8 +23,8 @@
       <div>
         <p class="verkefni">Verkefni 4.1</p>
         <nav class="topnav">
-          <a href=" " title="bakgrunnar">Bakgrunnar</a>
-          <a href=" " title="Efnisyfirlit">Efnisyfirlit</a>
+          <a href="index2.html" title="bakgrunnar">Bakgrunnar</a>
+          <a href="innerlinks.html" title="Efnisyfirlit">Efnisyfirlit</a>
         </nav>
       </div>
     </header>
@@ -76,6 +76,15 @@
              <li>
               <a href="/verkefni3" title="verkefni 3">Verkefni 3</a>
             </li>
+            <li>
+              <a href="/verkefni3" title="verkefni 4">Verkefni 4</a>
+            </li>
+            <li>
+              <a href="/verkefni3" title="verkefni 4.1">Verkefni 4.1</a>
+            </li>
+            <li>
+              <a href="/verkefni3" title="verkefni 4.2">Verkefni 4.2</a>
+            </li>
           </ul>
         </nav>
         <nav>
@@ -85,16 +94,16 @@
               <a href="https://vefgrunnur.github.io/bjargir.html" target="_blank" title="Vefgrunnur">Gagnlegar grunnslóðir</a>        
             </li>  
             <li>
-              tengill hér sem vísar á mikilvæga vefsíðu 
+              <a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg" target="_blank" title="Net Ninja">Net Ninja</a>
             </li>
             <li>
-              tengill hér sem vísar á mikilvæga vefsíðu 
+             <a href="https://www.w3schools.com" target="_blank" title="W3schools">w3schools</a>
             </li>
             <li>
-                tengill hér sem vísar á mikilvæga vefsíðu 
+           <a href="https://learn.shayhowe.com/html-css/setting-backgrounds-and-gradients/" target="_blank" title="Shayhowe">Shayhowe</a>
             </li>
         </nav>
       </footer>
-    <p class="copy">&copy; 2019 ---</p>
+    <p class="copy">&copy; 2019 ÓOÓ</p>
   </body>
 </html>
