--- a/verkefni4/index.html
+++ b/verkefni4/index.html
@@ -39,13 +39,10 @@
               <a href="/verkefni3" title="verkefni 3">Verkefni 3</a>
             </li>
             <li>
-              <a href="/verkefni3" title="verkefni 4">Verkefni 4</a>
+              <a href="index2.html" title="verkefni 4.1">Verkefni 4.1</a>
             </li>
             <li>
-              <a href="/verkefni3" title="verkefni 4.1">Verkefni 4.1</a>
-            </li>
-            <li>
-              <a href="/verkefni3" title="verkefni 4.2">Verkefni 4.2</a>
+              <a href="innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
 </main>
     <article><h3>Lippsy Dippsy Doppsy</h3>
 <p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
