--- a/verkefni4/innerlinks.html
+++ b/verkefni4/innerlinks.html
@@ -3,6 +3,29 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <style>
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 60px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #5371FF;
+}
+</style> 
+
     <title>Verkefni 4.2 Efnisyfirlit og tenglar</title>
     <!-- veljið leturgerð af http://fonts.google.com-->
     <link rel="stylesheet" href="styles2.css">
@@ -13,6 +36,29 @@
 </script>
   </head>
   <body>
+     <button onclick="topFunction()" id="myBtn" title="Efst á síðu">Efst</button>
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
     <header class="container col-2">
       <div>
         <h1>
