--- a/verkefni4/innerlinks.html
+++ b/verkefni4/innerlinks.html
@@ -74,14 +74,14 @@ function topFunction() {
       </div>
     </header>
     <div class="headsection">
-      <section class="container col-2">
+      <section class="container">
         <nav class="innermenu"> 
-          <a href="#">Læknisskoðun</a> <!-- #læknis = tengi á id -->
-          <a href="#">Óskirnar 3</a>
-          <a href="#">Adam og ...</a>
-          <a href="#">Alnæmisfaraldurinn</a>
-          <a href="#">Jólakveðja</a>
-          <a href="#">Gef oss í dag vort daglegt ... </a>
+          <a href="#Læknisskoðun">Læknisskoðun</a> <!-- #læknis = tengi á id -->
+          <a href="#Óskirnar">Óskirnar 3</a>
+          <a href="#Adam">Adam og ...</a>
+          <a href="#Alnæmi">Alnæmisfaraldurinn</a>
+          <a href="#Jólakveðja">Jólakveðja</a>
+          <a href="#Gefoss">Gef oss í dag vort daglegt ... </a>
         </nav> 
         <h1>Innri og ytri tenglar</h1>
         <p>Í <strong>&lt;footer&gt;</strong> tagið á að setja upplýsignar um þig í DD lista og nokkra tengla í UL lista sem vísa á önnur verkefni og aðrar vefsíður. Vefsíðurnar eiga að birtast í nýjum glugga í vafranum (notið <i>target:_blank</i>)</p>
@@ -91,7 +91,7 @@ function topFunction() {
         <p>Hvernig á að setja einn tengil á vefsíðuna sem er með fastri staðsetningu neðst á skjánum og  vísar <br> "efst á síðu"?</p>
       </section>
     </div>
-    <div class="headsection4" id="">
+    <div class="headsection4" id="læknisskoðun">
       <section class="container col-2" >
           <h3>Læknisskoðun</h3>
           <p>90 ára gamall maður var í árlegri læknisskoðun og læknirinn spurði hann hvernig hann hefði það.
@@ -106,7 +106,7 @@ function topFunction() {
           <p><a href=" ">Efst á síðu</a></p>
       </section>
     </div>
-    <div class="" id="Óskirnar">
+    <div class="height" id="Óskirnar">
       <section class="container col-2">
         <div>
             <h3 class=" ">Óskirnar 3</h3>
