--- a/verkefni4/index2.html
+++ b/verkefni4/index2.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <section class="headsection"> 
-      <main class="container">
+      <main class="container col-2">
         <section>
           <h1>Litaskali í bakgrunni </h1>
           <p>Meðfylgjandi verkefninu er <strong>.zip skrá </strong>með 2 vefsíðum sem þú átt að tengja saman.  Normalize.css stílsíðan fylgir með en aðal stílsíðuna vantar. Þú átt að búa hana til og tengja við vefsíðurnar. Skipulag síðunnar á að vera svipað því sem sýnt er hér á vefsíðunni en <em>lita- og leturval er frjálst</em></p>       
