--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -7,13 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+     <script>
+  window.onload = function() {  // reload file every second
+    setInterval(function() { location.reload(); } , 1000);
+  };
+</script>
 </head>
 <body>
    <div class="wrapper">
-    <header><h1>Forsíða VEFÞ</h1></header>
-    <aside><h3>Pooe Peei Penge</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
-</p></aside>
+    <header><h1>Forsíða VEFÞ</h1><img src="drugpugnb.png" alt="Logo"> </header>
+    
+    <aside><h3>Um Mig</h3>
+<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. ég á hund sem heitir lúlú og hún er pug. ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza
+<img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t1.0-9/37387627_1514255048680228_9084861510517260288_n.jpg?_nc_cat=101&_nc_oc=AQlpeIvLmlMjZ8YqvTjt4RZhJA-FV2lwKBVZUl12MC0SG4oICNS5sEJQFXsF6PRLdTw&_nc_ht=scontent.frkv3-1.fna&oh=c078042e547011e780163f5417c018d8&oe=5E4FF59D
+" alt="Logo"></p>
+<ul>
+<li>Almennt:</li>
+<li>Íslenska, Enska, Stærðfræði, Náttúrulæsi, Lífsleikni, Heilsa og Lífsstíll</li>
+<li><p></p></li>
+<li>Félagsfræðibraut:</li>
+<li>Félagsfræði og Saga</li>
+<li><p></p></li>
+<li>Grunnám Rafiðna:</li>
+<li>Verktækni grunnáms, Skyndihjálp, Stýringar og rökrásir, Rafmagnsfræði, Raflagnir, Mekatronik</li>
+
+
+
+</ul></aside>
     <main> <h3>Öll Verkefni</h3>
         <li>
             <a href="/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
@@ -39,9 +59,8 @@
             <li>
               <a href="innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
 </main>
-    <article><h3>Lippsy Dippsy Doppsy</h3>
-<p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
-</p></article>
+    <article><h3>Áhugamál</h3>
+<p>Áhugamálin mín eru meðal annars að hanga með vinum, dýr, píanó, tæknibúnaður, virtual reality og fleira. Einnig er gaman að fara út á skemmtistaði með vinum að t.d. hlusta á rappara syngja eða slíkt, svo höldum við oft spilakvöld allir saman sem við spilum allskonar spil eins og cards against humanity. </p></article>
     
     <footer>
         <ul>
